# vibra

./: .gitignore  Cargo.toml  LICENSE  README.md  app.zon  build.zig  build.zig.zon  package.json  pnpm-lock.yaml  start.sh  vercel.json
crates/vibra-dsp/: Cargo.toml
crates/vibra-dsp/src/: engine.rs  ffi.rs  graph.rs  lib.rs  midi.rs  param.rs  voice.rs
crates/vibra-dsp/src/modules/: delay.rs  env.rs  filter.rs  gain.rs  lfo.rs  mod.rs  multiplier.rs  noise.rs  osc.rs  pan.rs  reverb.rs  scope.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  OPEN_SYNTH_PATCH.md  PLUGIN_SDK.md  PRODUCT_SPEC.md  ROADMAP.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: vibra_dsp.wasm
frontend/src/: main.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/examples/: acid-bass.js  echo-pluck.js  fm-bell.js  hello-sine.js  juno-pad.js  minecraft-pluck.js  noise-perc.js  pluck-synth.js  space-drone.js  tremolo-pad.js
frontend/src/patch-format/: osp.js
frontend/src/plugin/: sdk.js
frontend/src/plugins/: example-lfo.js
frontend/src/synth/: audio-context.js  engine-bridge.js  module.js  patch-bay.js  registry.js
frontend/src/synth/builtins/: delay.js  destination.js  envelope.js  filter.js  gain.js  lfo.js  multiplier.js  noise.js  oscillator.js  reverb.js  (+1 more)
frontend/src/ui/: graph.js  keyboard.js  palette.js
frontend/src/worklet/: vibra-processor.js
schema/: open-synth-patch-0.1.0.json
src/: main.zig
