[package]
name = "vibra"
version.workspace = true
description = "A hackable digital modular synthesizer"
authors = ["you"]
edition.workspace = true
license.workspace = true
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
